Added device type recognition with express-device

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -9,7 +9,8 @@
 {{> header}}
 
 <p>My first paragraph.</p>
-<p>Welcome, {{screamIt welcomeMessage}}</p>
+<p>Welcome, {{screamIt welcomeMessage}} on {{screamIt deviceType}}</p>
+
 
 {{> footer}}
 
